Fix(parallax): Resolve zoomed background issue on iPad landscape. - Now detects tablet devices and disabled background-attachment: fixed. - Applied scroll behavior for parallax backgrounds on touch-enabled large screens. - Prevented parallax distortion on iPad and similar tablets in landscape mode

--- a/Styles/common.css
+++ b/Styles/common.css
@@ -1,3 +1,10 @@
+.lazy-bg {
+  background-color: #000; /* fallback color */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 .main-parallax {
   background-image: url("../assets/images/parallax/plethoraOfCarbonMolecules.webp");
   min-height: 300px;
